kubernetes/mainnet-eu-central-1-eks/00100-networkpolicy-private-lotus-fullnode-app-ntwk-mainnet-bootstrap.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: private-lotus-fullnode-app
  namespace: ntwk-mainnet-bootstrap
spec:
  podSelector:
    matchLabels:
      app: lotus-fullnode-app
      mode: restricted
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/16
    - ipBlock:
        cidr: 209.94.78.1/32
  - ports:
     - port: 53
       protocol: UDP
     - port: 53
       protocol: TCP
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/16
